Externalize locks/edit.html.haml

--- a/app/views/locks/edit.html.haml
+++ b/app/views/locks/edit.html.haml
@@ -1,12 +1,9 @@
 .container
   %header.with-subtitle
-    %h1
-      Edit the lock
-    %p
-      = link_to('back to viewing all locks', user_home_path(active_tab: 'locks'))
-
+    %h1= t(".edit_the_lock")
+    %p= link_to(t(".back_to_viewing_all_locks"), user_home_path(active_tab: 'locks'))
 
   = render partial: "form"
 
   .form-group.destroy-button
-    = button_to 'Delete this lock', { action: 'destroy', id: @lock}, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-lg '
+    = button_to t(".delete_this_lock"), { action: 'destroy', id: @lock}, method: :delete, data: { confirm: t(".are_you_sure") }, class: "btn btn-danger btn-lg"
