Externalize locks/new.html.haml

--- a/app/views/locks/new.html.haml
+++ b/app/views/locks/new.html.haml
@@ -1,8 +1,5 @@
 .container
   %header.with-subtitle
-    %h1
-      Save information about one of your locks
+    %h1= t(".save_information_about_one_of_your_locks")
 
   = render partial: "form"
-
-
