Externalize alt tags

--- a/app/views/locks/_form.html.haml
+++ b/app/views/locks/_form.html.haml
@@ -76,13 +76,13 @@
           = t(".examples_of_serial_numbers_found_on_diffe")
         %section
           %a.lock-picture{ data: { target: image_path('locks/krypto_small_key.jpg') } }
-            = image_tag('locks/krypto_small_key.jpg', alt: "Small kryptonite key")
+            = image_tag('locks/krypto_small_key.jpg', alt: t(".small_kryptonite_key"))
           %p= t(".small_kryptonite_key")
         %section
           %a.lock-picture{ data: { target: image_path('locks/krypto_large_key.jpg') } }
-            = image_tag('locks/krypto_large_key.jpg', alt: "Large kryptonite key")
+            = image_tag('locks/krypto_large_key.jpg', alt: t(".large_kryptonite_key"))
           %p= t(".large_kryptonite_key")
         %section
           %a.lock-picture{ data: { target: image_path('locks/pinhead_key.jpg') } }
-            = image_tag('locks/pinhead_key.jpg', alt: "Pinhead key")
+            = image_tag('locks/pinhead_key.jpg', alt: t(".pinhead_key"))
           %p= t(".pinhead_locking_skewer_key")
