--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -1,18 +1,18 @@
 - @initial_amount = params[:amount] && params[:amount].to_i
 - @is_payment = @initial_amount.present?
-/ if there is a payment set, make it clear what is going on
+-# if there is a payment set, make it clear what is going on
 .container-fluid
   .row.donate-block
     .col-xs-12
       %h3
         - if @is_payment
-          Pay Bike Index
+          = t(".pay_bike_index")
         - else
-          Donate today
+          = t(".donate_today")
     .select-amount
-      
+
       - unless @is_payment
-        %p Select an amount
+        %p= t(".select_an_amount")
       %form#bikeindex-stripe-initial-form
         %ul.row.amount-list
           - if @is_payment # If payment, have one non-arbitrary button
@@ -31,17 +31,17 @@
                   $
                 %input#arbitrary-amount.form-control{ type: 'number', min: '0', placeholder: 'Other amount', step: 0.01, value: @initial_amount, class: ('active' if @initial_amount) }
         .next-step
-          = submit_tag 'next  >', class: 'btn btn-primary'
+          = submit_tag t(".next"), class: 'btn btn-primary'
 
       %p.nfp-info
-        Bike Index is a #{ link_to '501(c)(3) nonprofit', 'https://bikeindex.org/news/bike-index--now-a-nonprofit' }.
+        - nonprofit_link = link_to t(".501c3_nonprofit"), 'https://bikeindex.org/news/bike-index--now-a-nonprofit'
+        = t(".bike_index_is_a_nonprofit_html", nonprofit_link: nonprofit_link)
 
   <script src="https://checkout.stripe.com/checkout.js"></script>
   - payment_type = @is_payment ? 'Pay' : 'Donate'
   - stripe_form_hash = { id: 'stripe_form', data: { key: ENV['STRIPE_PUBLISHABLE_KEY'],  email: current_user && current_user.email, type:  payment_type } }
   = form_tag payments_path, stripe_form_hash do
     = hidden_field_tag :stripe_token
-    = hidden_field_tag :stripe_amount 
+    = hidden_field_tag :stripe_amount
     = hidden_field_tag :stripe_email
     = hidden_field_tag :is_payment, @is_payment
-    
