--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -29,7 +29,7 @@
               .input-group
                 .input-group-addon
                   $
-                %input#arbitrary-amount.form-control{ type: 'number', min: '0', placeholder: 'Other amount', step: 0.01, value: @initial_amount, class: ('active' if @initial_amount) }
+                %input#arbitrary-amount.form-control{ type: 'number', min: '0', placeholder: t('.other_amount'), step: 0.01, value: @initial_amount, class: ('active' if @initial_amount) }
         .next-step
           = submit_tag t(".next"), class: 'btn btn-primary'
 
@@ -39,7 +39,7 @@
 
   <script src="https://checkout.stripe.com/checkout.js"></script>
   - payment_type = @is_payment ? 'Pay' : 'Donate'
-  - stripe_form_hash = { id: 'stripe_form', data: { key: ENV['STRIPE_PUBLISHABLE_KEY'],  email: current_user && current_user.email, type:  payment_type } }
+  - stripe_form_hash = { id: 'stripe_form', data: { key: ENV['STRIPE_PUBLISHABLE_KEY'], email: current_user && current_user.email, type: payment_type } }
   = form_tag payments_path, stripe_form_hash do
     = hidden_field_tag :stripe_token
     = hidden_field_tag :stripe_amount
