Externalize organizations/new.html.haml

--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -1,6 +1,6 @@
 .container
   %h1
-    Bike Index for organizations
+    = t(".bike_index_for_organizations")
   = render partial: "/landing_pages/for_organizations_photo_list"
 
   .mt-4
