--- a/app/views/locks/_form.html.haml
+++ b/app/views/locks/_form.html.haml
@@ -9,48 +9,47 @@
 
     .lock-types-select
       .lock-type-title
-        %label
-          Lock type
+        %label= t(".lock_type")
 
       - lock_types.each do |lock|
         .lock-type
           %div
             %input{ id: "locky_#{lock.id}", type: "radio", name: "lock_types_select", data: { value: lock.id } }
           %label{ for: "locky_#{lock.id}" }
-            %span
-              = lock.name
+            %span= lock.name
             = image_tag "locks/#{lock.slug}.jpg"
 
       = f.hidden_field :lock_type_id
-
 
     .row
       .col-md-6
         .related-fields
           .form-group.unfancy.fancy-select.manufacturer-select{ data: { otherid: Manufacturer.other.id } }
             = f.label :manufacturer_id, class: "form-label"
-            = f.collection_select(:manufacturer_id, Manufacturer.all, :id, :name, { required: true, prompt: "Choose manufacturer" }, class: 'form-control')
+            = f.collection_select(:manufacturer_id, Manufacturer.all, :id, :name, { required: true, prompt: t(".choose_manufacturer") }, class: 'form-control')
           .hidden-other.form-group
-            = f.label :manufacturer_other, "Other lock manufacturer", class: "form-label"
+            = f.label :manufacturer_other, t(".other_lock_manufacturer"), class: "form-label"
             = f.text_field :manufacturer_other, class: 'form-control'
 
         .form-check
           %label.form-check-label
             = f.check_box :has_key, class: "form-check-input"
-            Has key
+            = t(".has_key")
 
         .form-check
           %label.form-check-label
             = f.check_box :has_combination, class: "form-check-input"
-            Has combination
+            = t(".has_combination")
 
         #serial-group.form-group
           .form-label
             = f.label :key_serial
             = f.text_field :key_serial, class: 'form-control'
         .form-group.submit-button
-          - action_name = @lock.id.present? ? 'Update' : 'Add'
-          = submit_tag "#{action_name} the lock!", class: 'btn btn-success btn-lg'
+          - if @lock.id.present?
+            = submit_tag t(".update_the_lock"), class: 'btn btn-success btn-lg'
+          - else
+            = submit_tag t(".add_the_lock"), class: 'btn btn-success btn-lg'
 
       .col-md-6
         #combination.form-group.initially-hidden
@@ -66,29 +65,24 @@
 
           .form-group.lock-notes
             %label.form-label{ for: 'notes' }
-              Additional notes
+              = t(".additional_notes")
             .controls
-              = f.text_area :notes, toolbar: 'Basic', class: 'ckeditor, form-control'
+              = f.text_area :notes, toolbar: t(".basic"), class: 'ckeditor, form-control'
 
 
     .card.lock-pictures
       .card-block
         %h3.card-title
-          Examples of serial numbers found on different types of bike lock keys
+          = t(".examples_of_serial_numbers_found_on_diffe")
         %section
           %a.lock-picture{ data: { target: image_path('locks/krypto_small_key.jpg') } }
-            = image_tag('locks/krypto_small_key.jpg', alt: "Small kryptonite key")
-          %p
-            Small Kryptonite key
+            = image_tag('locks/krypto_small_key.jpg', alt: t(".small_kryptonite_key"))
+          %p= t(".small_kryptonite_key")
         %section
           %a.lock-picture{ data: { target: image_path('locks/krypto_large_key.jpg') } }
-            = image_tag('locks/krypto_large_key.jpg', alt: "Large kryptonite key")
-          %p
-            Large Kryptonite key
+            = image_tag('locks/krypto_large_key.jpg', alt: t(".large_kryptonite_key"))
+          %p= t(".large_kryptonite_key")
         %section
           %a.lock-picture{ data: { target: image_path('locks/pinhead_key.jpg') } }
-            = image_tag('locks/pinhead_key.jpg', alt: "Pinhead key")
-          %p
-            Pinhead locking skewer key
-
-
+            = image_tag('locks/pinhead_key.jpg', alt: t(".pinhead_key"))
+          %p= t(".pinhead_locking_skewer_key")
