Externalize organization_invitations, payments, registrations templates (#1213)
* Externalize organization_invitations/not_available.html.haml

* Externalize payments templates

Externalizes the following templates:

- payments/_form.html.haml
- payments/create.html.haml
- payments/new.html.haml

* Externalize shared/_errors.html.haml

* Extern registrations/create.html.haml

* Externalize registrations/embed.html.haml

* Add placeholder

* Fix missing key

--- a/app/views/registrations/create.html.haml
+++ b/app/views/registrations/create.html.haml
@@ -1,15 +1,15 @@
-
 %h2
   - if @b_param.stolen
-    We got this.
+    = t(".we_got_this")
   - else
-    Radicool!
+    = t(".radicool")
 %p
-  We sent an email to:
+  = t(".we_sent_an_email_to")
   %strong #{@b_param.owner_email}
+
 %p
-  In it, you'll find instructions on how to complete the registration of your bike
+  = t(".in_it_youll_find_instructions")
 
 - if @b_param.stolen
   %p
-    We'll do our best to help you get it back
+    = t(".well_do_our_best_to_help_you_recover_it")
