--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -1,7 +1,7 @@
 .container
   %h1
-    Bike Index for organizations
-  = render partial: "/landing_pages/for_organizations_photo_list"
+    = t(".bike_index_for_organizations")
+  = render partial: "landing_pages/for_organizations_photo_list"
 
   .mt-4
 
