Set bike_placeholder_image url on window object

--- a/app/views/bikes/index.html.haml
+++ b/app/views/bikes/index.html.haml
@@ -81,5 +81,6 @@
 
 :javascript
   window.interpreted_params = #{@interpreted_params.to_json};
+  window.bike_placeholder_image = "#{bike_placeholder_image_path}";
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
