--- a/app/views/feedbacks/index.html.haml
+++ b/app/views/feedbacks/index.html.haml
@@ -1,23 +1,22 @@
 %h1#top
-  Help with Bike Index
+  = t(".help_with_bike_index")
 
-= render 'shared/faq'
-
-
+= render "shared/faq"
 
 %hr
 
 %h3.padded#contact_us_section
-  Contact us!
+  = t(".contact_us")
 
-%p
-  Have a question we haven't answered?
-  / #{link_to 'Check out our forum', discuss_url}.
-%p
-  You can reach us at #{link_to "contact@bikeindex.org", "mailto:contact@bikeindex.org"}, or send your message right here.
+%p= t(".have_a_question_we_havent_answered")
+
+- contact_link = link_to "contact@bikeindex.org", "mailto:contact@bikeindex.org"
+%p= t(".you_can_reach_us_at_contact_html", contact_link: contact_link)
+
 - if current_user.present?
   %article
-    = render 'feedbacks/form'
+    = render "feedbacks/form"
 - else
   %h3
-    = link_to 'Log in to send a comment!', new_session_url(return_to: '/help#contact_us_section')
+    = link_to t(".log_in_to_send_a_comment"),
+      new_session_url(return_to: help_path(anchor: "contact_us_section"))
