--- a/app/views/memberships/edit.html.haml
+++ b/app/views/memberships/edit.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Edit membership for
+  = t(".edit_membership_for")
   %em
     - if @user.name.present?
       = @user.name
@@ -7,47 +7,39 @@
       = @user.email
 
 %p
-  Joined Bike Index #{@user.created_at.strftime("%-m/%-d/%Y")}
+  - date = @user.created_at.strftime("%-m/%-d/%Y")
+  = t(".joined_bike_index_date", date: date)
 
 %section.full-screen-table.padded
-  %p
-    Bikes indexed for
-    %strong
-      = @membership.organization.name
-    by
-    - if @user.name.present?
-      = @user.name
-    - else
-      = @user.email
+  %p= t(".bikes_indexed_for_org_html", org_name: @membership.organization.name, user: @user.name.presence || @user.email)
+
   %table#org-bikes-table.table.table-striped.table-bordered
     %thead
-      / %th
-      /   Link&nbsp;&nbsp;
       %th
-        Date indexed
+        = t(".date_indexed")
       %th.medium-screens
-        Sent to
+        = t(".sent_to")
       %th
-        Manufacturer
+        = t(".manufacturer")
       %th.large-screens
-        Color&nbsp;&nbsp;
+        = t(".color")
+        &nbsp;&nbsp;
 
     %tbody
       - @bikes.each do |bike|
         %tr
           %td
             - if bike.created_at.today?
-              %span.hidden
-                = bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
-              Today at #{bike.created_at.strftime("%-I %p")}
-            - elsif Date.yesterday().beginning_of_day() <= bike.created_at
-              %span.hidden
-                = bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
-              Yesterday at #{bike.created_at.strftime("%-I %p")}
+              %span.hidden= bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
+              = t(".today_at_timestamp", timestamp: bike.created_at.strftime("%-I %p"))
+            - elsif Date.yesterday.beginning_of_day <= bike.created_at
+              %span.hidden= bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
+              = t(".yesterday_at_timestmap", timestmap: bike.created_at.strftime("%-I %p"))
             - else
-              %span.hidden
-                = bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
-              = bike.created_at.strftime("%-m/%-d/%Y at %-I %p")
+              %span.hidden= bike.created_at.strftime("%-m.%-d.%Y %-H.%M")
+              = bike.created_at.strftime("%-m/%-d/%Y")
+              = t(".at")
+              = bike.created_at.strftime("%-I %p")
           %td.medium-screens
             = bike.owner_email
           %td
@@ -59,7 +51,8 @@
 %section.padded
   .well.span6.centered-form-well
     %h3
-      Edit #{@user.email}
+      = t(".edit")
+      = @user.email
 
     .form.form-horizontal.padded
       = form_for @membership do |f|
@@ -69,11 +62,15 @@
           .controls.radio-controls
             %label.radio
               = f.radio_button :role, "admin"
-              Admin of organization
+              = t(".admin_of_organization")
             %label.radio
               = f.radio_button :role, "member"
-              Member of organization
+              = t(".member_of_organization")
 
         .membership-actions.clearfix
-          = f.submit 'Update role', class: 'button-green'
-          = link_to "Delete member", membership_url(@membership), method: :delete, data: { confirm: "Are you sure you want to remove #{@user.email} from your organization?" }, class: "button-red"
+          = f.submit t(".update_role"), class: 'button-green'
+          = link_to t(".delete_member"),
+            membership_url(@membership),
+            method: :delete,
+            data: { confirm: t(".are_you_sure_you_want_to_remove_user", user_email: @user.email) },
+            class: "button-red"
