--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -2,31 +2,31 @@
   .blog-header
     %h1.global-title
       = @blog.title
+
     %article.blogger-info
       %h4
-        by
+        = t(".by")
+
         %a.blog-poster{href: @blogger.userlink}
-          = @blogger.name if @blogger.name
+          = @blogger.name.presence
       %h4.pub-date
         - if @blog.published_at > Time.current - 1.week
-          #{l @blog.published_at, format: :standard_display}
+          = l(@blog.published_at, format: :standard_display)
         - else
-          #{l @blog.published_at, format: :no_day_with_year}
+          = l(@blog.published_at, format: :no_day_with_year)
+
 - if @blog.is_listicle
   - @blog.listicles.each_with_index do |list_item, i|
     - unless i == 0
       %hr.listicle-separator
     = listicle_html(list_item)
 
-
 - else
   :markdown
     #{@blog.body}
 
-
-
 - if Rails.env.production? && @blog.published
-  / Clear the ad overhang with a padded block
+  -# Clear the ad overhang with a padded block
   .padded
   %article#discourse-comments
     :plain
